agregamos ejemplo en la seleccion de preguntas

--- a/templates/authapp/login.html
+++ b/templates/authapp/login.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'template/img/logos/logo_sencillo.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'template/img/logos/logo_sencillo.png' %}">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
