--- a/templates/surveys/admin/survey_detail.html
+++ b/templates/surveys/admin/survey_detail.html
@@ -10,7 +10,7 @@
   <div class="d-flex align-items-center justify-content-between mb-2">
     <h2 class="mb-0">{{ survey.title }}</h2>
     <a class="btn btn-primary" href="{% url 'survey_responses' survey.id %}">Ver respuestas</a>
-    <a class="btn btn-primary" href="{% url 'survey_export_xlsx' survey.id %}">XLSX (con gráficas)</a>
+    <a class="btn btn-primary" href="{% url 'survey_export_xlsx' survey.id %}">XLSX</a>
 
   </div>
   <p class="text-muted mb-3">
