--- a/templates/users/user_dashboard.html
+++ b/templates/users/user_dashboard.html
@@ -79,7 +79,7 @@
             </td>
           </tr>
         {% empty %}
-          <tr><td colspan="4" class="text-center">No hay empleados registrados.</td></tr>
+          <tr><td colspan="4" class="text-center">Sin resultados</td></tr>
         {% endfor %}
       </tbody>
     </table>
