--- a/templates/surveys/admin/survey_dashboard_admin.html
+++ b/templates/surveys/admin/survey_dashboard_admin.html
@@ -115,7 +115,7 @@
         </td>
       </tr>
       {% empty %}
-      <tr><td colspan="5" class="text-center">No hay encuestas aún.</td></tr>
+      <tr><td colspan="5" class="text-center">No se encontraron resultados.</td></tr>
       {% endfor %}
     </tbody>
   </table>
