--- a/templates/courses/admin/wizard_form.html
+++ b/templates/courses/admin/wizard_form.html
@@ -335,9 +335,8 @@
                 <textarea class="form-control" name="explanation" rows="3" placeholder="Explicación de respuesta"></textarea></div>  
                             
             <div class="d-flex justify-content-between mt-4">
-            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="offcanvas">Cancelar</button>
             <div>
-                <button type="submit" class="btn btn-success me-2" id="save-add-another">Guardar y agregar otra</button>
+                <button type="submit" class="btn btn-success me-2" id="save-add-another">Agregar nueva pregunta</button>
                 <button type="submit" class="btn btn-primary" id="save-close" data-bs-dismiss="offcanvas">Guardar</button>
             </div>
             </div>
