--- a/templates/recognitions/user/recognition_dashboard_user.html
+++ b/templates/recognitions/user/recognition_dashboard_user.html
@@ -128,6 +128,12 @@
               <input class="form-check-input" type="checkbox" name="email_channels" id="ch_juarez" value="juarez">
               <label class="form-check-label" for="ch_juarez">Estaciones Juárez</label>
             </div>
+            <!-- Programar publicación -->
+            <label class="form-label d-block">Programar publicación</label>
+            <div class="mb-3">
+              <input type="datetime-local" name="publish_at" class="form-control">
+              <div class="form-text">Déjalo vacío para publicar de inmediato.</div>
+            </div>
           </div>
         </div>
 
