cambio de reconocimiento (y variantes) por comunicado (y variantes)

--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -33,7 +33,7 @@
 
                     <li class="sidebar-item ">
                         <a class="sidebar-link" href="{% url 'recognition_dashboard' %}">
-                            <i class="fa-solid fa-award"></i><span class="align-middle">Reconocimientos</span>
+                            <i class="fa-solid fa-award"></i><span class="align-middle">Comunicados</span>
                         </a>
                     </li>
                 {% endif %}
