--- a/templates/recognitions/user/_cards.html
+++ b/templates/recognitions/user/_cards.html
@@ -105,7 +105,7 @@
               {% for m in imgs %}
                 <div class="carousel-item {% if forloop.first %}active{% endif %}">
                   <img src="{{ m.file.url }}" class="d-block w-100"
-                       alt="Imagen del reconocimiento"
+                       alt="Imagen del comunicado"
                        style="max-height:420px; object-fit:cover;">
                 </div>
               {% endfor %}
