--- a/templates/recognitions/user/recognition_dashboard_user.html
+++ b/templates/recognitions/user/recognition_dashboard_user.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
 {% endblock %}
 
-{% block page_title %}Panel de Reconocimientos{% endblock %}
+{% block page_title %}Panel de Comunicados{% endblock %}
 
 {% block content %}
 <div class="container py-3" style="max-width:820px;">
-  <h1 class="mb-3">Reconocimientos</h1>
-
+  <h1 class="mb-3">Comunicados</h1>
   {% if perms.recognitions.add_recognition %}
   <!-- Tarjeta: input para abrir el modal -->
   <div class="card shadow-sm mb-4">
@@ -21,13 +20,13 @@
         {{ request.user.first_name|default:request.user.username|slice:":1" }}{{ request.user.last_name|slice:":1" }}
       </div>
       <div class="flex-grow-1">
-        <input id="openNewRec" class="form-control" placeholder="Envía un reconocimiento…" readonly>
+        <input id="openNewRec" class="form-control" placeholder="Envía un comunicado…" readonly>
       </div>
     </div>
   </div>
   {% endif %}
 
-  <!-- FEED: tarjetas de reconocimientos -->
+  <!-- FEED: tarjetas de comunicado -->
 <div id="feed">
   {% include 'recognitions/user/_cards.html' %}
 </div>
@@ -46,13 +45,13 @@
 </div>
 
 {% if perms.recognitions.add_recognition %}
-<!-- MODAL: Nuevo reconocimiento -->
+<!-- MODAL: Nuevo comunicado -->
 <div class="modal fade" id="newRecognitionModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-aside modal-lg">
     <form method="post" action="{% url 'recognition_dashboard_user' %}" enctype="multipart/form-data" class="modal-content">
       {% csrf_token %}
       <div class="modal-header">
-        <h5 class="modal-title">Nuevo reconocimiento</h5>
+        <h5 class="modal-title">Nuevo comunicado</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
 
@@ -168,7 +167,7 @@
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="likesOffcanvas" aria-labelledby="likesOffcanvasLabel">
   <div class="offcanvas-header">
-    <h5 id="likesOffcanvasLabel">A quién le gusta este reconocimiento</h5>
+    <h5 id="likesOffcanvasLabel">A quién le gusta este comunicado</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
   </div>
   <div class="offcanvas-body">
