chore: cambio directo en staging

--- a/templates/news/user/news_view_user.html
+++ b/templates/news/user/news_view_user.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Noticias</h1>
+<h1>Noticiaswwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww</h1>
 
   <form class="mb-3" method="get">
     <input type="text" name="q" value="{{ q }}" class="form-control" placeholder="🔍 Buscar por título de noticia">
