--- a/templates/forms_requests/admin/request_form_admin.html
+++ b/templates/forms_requests/admin/request_form_admin.html
@@ -14,7 +14,7 @@
         Plantilla de constancias
       </button>
       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCarta">
-        Carta de recomendación
+        Constancia laboral
       </button>
     </div>
   </div>
