--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -133,20 +133,20 @@
     {% block scripts %}
     {% endblock %}
 
-<!-- Botón flotante -->
+<!-- Botón flotante 
 <div id="mi-boton-widget" onclick="toggleWidget()">
   BUG
-</div>
+</div> -->
 
 <!-- Panel de contenido oculto -->
-<div id="mi-panel-widget">
+{% comment %} <div id="mi-panel-widget">
   Este botón estará solo disponible en la versión de pruebas del HRMS, para hacer capturas de errores o bugs. <br><br>
   Versión V0.1 por Aplicaciones y Software <br> TotalGas
   <br><br>
   <a href="https://totalgas-developments.atlassian.net/jira/software/form/c10b6246-6526-4783-8987-32a816174804?atlOrigin=eyJpIjoiNmI2MzEwNDE0NzdiNDcxOWEyYWFmYzg5YjdmYzhmMjEiLCJwIjoiaiJ9"  target="_blank">
     <button>CAPTURAR ERROR</button>
   </a>
-</div>
+</div> {% endcomment %}
 
 <script>
 (() => {
