--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -81,7 +81,7 @@
 
 	<body style="font-family: 'Encode Sans Condensed', sans-serif; font-weight: 500; /* Medium */">
 
-	<title>HRMS - 6445345345 {% block page_title %}{% endblock %}</title>
+	<title>HRMS - {% block page_title %}{% endblock %}</title>
 
 
 	<link href="{% static "template/css/app.css" %}" rel="stylesheet">
