--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -13,13 +13,22 @@
 </h1>
 
 <h2 class="mb-4 text-center">
-  <br>Acumulado fondo de ahorro (próximamente)
+  <br>Acumulado fondo de ahorro
 </h2>
 
-  <div class="progress mb-4">
-    <div class="progress-bar bg-primary" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-      (próximamente)
+  <div class="progress position-relative mb-4"
+      style="--p: {{ saving_progress_percent }}%;">
+    <div class="progress-bar bg-primary"
+        role="progressbar"
+        style="width: {{ saving_progress_percent }}%;"
+        aria-valuenow="{{ saving_progress_percent }}"
+        aria-valuemin="0" aria-valuemax="100">
     </div>
+
+    <!-- ÚNICO monto, centrado -->
+    <span class="saving-label">
+      $ {{ saving_fund|default:0|floatformat:0 }}
+    </span>
   </div>
 
   <div class="row mb-4">
