--- a/templates/org_chart/_base_chart.html
+++ b/templates/org_chart/_base_chart.html
@@ -1,5 +1,2 @@
 {# templates/org_chart/_base_chart.html #}
-<div
-  class="chart-container"
-  style="height: 1200px; background-color: #fffeff;"
-></div>
+<div class="chart-container" style="height: 1200px; background-color: #fffeff;"></div>
