--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -27,7 +27,7 @@
 
     <!-- ÚNICO monto, centrado -->
     <span class="saving-label">
-      $ {{ saving_fund|default:0|floatformat:0 }}
+      $ {{ saving_fund|default:0 }}
     </span>
   </div>
 
